[gd_scene load_steps=2 format=3 uid="uid://dcr4il2exyomo"]

[ext_resource type="Script" uid="uid://luwbvur2tnwy" path="res://scripts/ui/victory_screen.gd" id="1_ivgej"]

[node name="VictoryScreen" type="CanvasLayer"]
script = ExtResource("1_ivgej")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.39100003
anchor_top = 0.26900002
anchor_right = 0.609
anchor_bottom = 0.731
offset_left = 0.56796265
offset_top = -0.31201172
offset_right = -0.5680542
offset_bottom = 0.3119812
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21800001
anchor_top = 0.21800001
anchor_right = 0.78200006
anchor_bottom = 0.78200006
offset_top = 0.099998474
offset_right = -1.5258789e-05
offset_bottom = -0.10002136
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VICTORY!"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EnemiesKilled" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="TimeElapsed" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "NEXT LEVEL"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[connection signal="pressed" from="Panel/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
